tests/tooling/fixtures/native/execution/positive/message_send_direct_nil_receiver_elision.objc3
// Positive execution fixture: direct nil receiver send should link and run without runtime shim.
module MessageSendDirectNilReceiverElisionExecution;

fn main() -> i32 {
  let sent = [nil ping];
  return sent + 9;
}
