tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_case_label_extern.objc3
module MisplacedQualifierCaseLabelExtern;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case extern:
      return 1;
    default:
      return 0;
  }
}